# depnuke

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: bump-release.yml  release.yml
homebrew/: depnuke.rb
src/: main.rs
